# tts-web

./: Dockerfile  README.md  app.py  entrypoint.sh  lid.py  models.json  pyproject.toml  requirements.txt  tts.py
.github/workflows/: docker.yaml
static/: main.css  main.js
templates/: index.html
